Fix for WFWIP-243, /opt/partition/partitionPV.sh --add-modules java.se not needed anymore